# edge_manufacturing_2

./: .breakpoints  add_mcmaster_carr_to_database.py  config.py  create_index.py  database.py  database_setup.py  main.py  models.py  pyproject.toml  replit.nix  text-to-cad-output.step
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
cad/: HoseClip.gcode  bumperClip.gcode
indexdir/: MAIN_bw9qovhdy1q1duyh.seg  MAIN_hh5m3ay6jpghzsb2.seg  MAIN_lpk1mhmcta1ez3qh.seg  MAIN_lrecjcl6sppb1rdx.seg  MAIN_qt4aajvkh56wfvs7.seg  MAIN_ufnr32eue57ydwqk.seg  MAIN_xhkoeeue48r24haa.seg  _MAIN_1.toc
instance/: prod.db
print/: fuse cover.gcode
templates/: index.html
